# ace_58

./: .gitignore  CLAUDE.md  README-zh.md  README.md
dev/config/: gateway.toml  rates.toml  world.toml
server/: .dockerignore  .editorconfig  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.zh-CN.md  docker-compose.dev.yml
server/.github/workflows/: ci.yml
server/config/: gateway.toml  rates.toml  world.toml
server/deploy/: docker-compose.clickhouse-smoke.yml
server/deploy/config-docker/: gateway.toml  rates.toml  world.toml
server/deploy/pg-init/: 01_create_databases.sql
server/doc/: admin-api.md  anti-cheat.md  architecture.md  benchmarks.md  ci.md  coverage.md  dev-boot-checklist.md  dev-guide.md  docker.md  glossary.md  incident-response.md  lint-baseline.txt  lint.md  loadgen.md  lua-api.md  observability.md  opcodes.md  runbook.md  s18-nats-inventory.md  s18-sp-inventory.md  style.md
server/doc/adr/: 0001-go-lua-split.md  0002-blowfish-little-endian.md  0003-all-sql-via-sp.md  0004-ecs-entity-model.md  0005-nats-jetstream-ipc.md  README.md  (+2 more)
server/launcher/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
server/launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
server/launcher/src-tauri/src/: commands.rs  config.rs  game_launcher.rs  main.rs
server/launcher/src-tauri/src/injector/: mod.rs  version_dll.rs
server/launcher/src-tauri/src/patcher/: downloader.rs  manifest.rs  mod.rs  verifier.rs
server/src/: go.mod  go.sum
(+1845 files in other folders)
